--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
+    "@types/react": "17.0.44",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.44"
   },
   "private": true
 }
