--- a/package.json
+++ b/package.json
@@ -34,12 +34,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@types/react": "~18.0.24",
+    "@types/react": "17.0.40",
     "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3"
-  },
-  "resolutions": {
-    "@types/react": "17.0.44"
   },
   "private": true
 }
