--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest --verbose --silent"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -16,6 +17,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/react-native": "^11.5.0",
     "expo": "^47.0.13",
     "expo-status-bar": "~1.4.2",
     "i18next": "^21.8.16",
@@ -34,9 +36,36 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@types/jest": "^29.2.6",
     "@types/react": "17.0.40",
     "@types/react-native": "~0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.3.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^4.6.3"
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "identity-obj-proxy"
+    },
+    "setupFiles": [
+      "./jest/jest.setup.js",
+      "./jest/jest.useTheme.js"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@react-native|react-native)"
+    ]
   },
   "private": true
 }
