--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --verbose --silent"
+    "test": "jest --verbose --silent",
+    "add-component": "npx hygen component-generator with-prompt"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
