--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --verbose --silent",
-    "add-component": "npx hygen component-generator with-prompt"
+    "add-component": "npx hygen component-generator with-prompt",
+    "add-container": "npx hygen container-generator with-prompt"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
