--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eject": "expo eject",
     "test": "jest --verbose --silent",
     "add-component": "npx hygen component-generator with-prompt",
-    "add-container": "npx hygen container-generator with-prompt"
+    "add-container": "npx hygen container-generator with-prompt",
+    "add-navigator": "npx hygen navigator-generator with-prompt"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
