--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "@types/react": "17.0.40",
     "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-mock-store": "^1.0.3",
     "babel-jest": "^29.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.6.3"
   },
   "jest": {
@@ -60,7 +62,8 @@
       "node"
     ],
     "moduleNameMapper": {
-      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "identity-obj-proxy"
+      ".+\\.(css|styl|less|sass|scss|ttf|woff|woff2)$": "identity-obj-proxy",
+      ".+\\.(png|jpg)$": "<rootDir>/jest/file-mock.js"
     },
     "setupFiles": [
       "./jest/jest.setup.js",
