--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
   "name": "expo-boilerplate",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
     "test": "jest --verbose --silent",
     "add-component": "npx hygen component-generator with-prompt",
     "add-container": "npx hygen container-generator with-prompt",
     "add-navigator": "npx hygen navigator-generator with-prompt"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-masked-view/masked-view": "0.2.8",
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/react-native": "^11.5.0",
-    "expo": "^47.0.13",
+    "expo": "~47.0.6",
+    "expo-asset": "~8.7.0",
+    "expo-constants": "~14.0.2",
+    "expo-font": "~11.0.1",
+    "expo-linking": "~3.3.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "~2.0.1",
+    "expo-web-browser": "~12.0.0",
     "i18next": "^21.8.16",
+    "nativewind": "^2.0.11",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -33,22 +42,24 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.7",
+    "react-native-web": "~0.18.9",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/jest": "^29.2.6",
-    "@types/react": "17.0.40",
+    "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-mock-store": "^1.0.3",
     "babel-jest": "^29.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
+    "jest-expo": "^47.0.0",
     "react-test-renderer": "^18.2.0",
     "redux-mock-store": "^1.5.4",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3"
   },
   "jest": {
