--- a/package.json
+++ b/package.json
@@ -16,10 +16,6 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-masked-view/masked-view": "0.2.8",
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
-    "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/react-native": "^11.5.0",
     "expo": "~47.0.6",
@@ -42,14 +38,12 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/jest": "^29.2.6",
-    "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-mock-store": "^1.0.3",
@@ -60,7 +54,8 @@
     "react-test-renderer": "^18.2.0",
     "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "@types/react": "17.0.40"
   },
   "jest": {
     "preset": "react-native",
