--- a/package.json
+++ b/package.json
@@ -13,22 +13,28 @@
     "add-navigator": "npx hygen navigator-generator with-prompt"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/drawer": "^6.4.4",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/react-native": "^11.5.0",
     "expo": "~47.0.6",
     "expo-asset": "~8.7.0",
+    "expo-auth-session": "~3.7.2",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
     "expo-linking": "~3.3.0",
+    "expo-random": "~13.0.0",
+    "expo-router": "1.0.0-rc5",
+    "expo-secure-store": "~12.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-system-ui": "~2.0.1",
     "expo-web-browser": "~12.0.0",
     "i18next": "^21.8.16",
-    "nativewind": "^2.0.11",
+    "nativewind": "^3.0.0-next.34",
     "prop-types": "^15.8.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -38,24 +44,27 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/jest": "^29.2.6",
+    "@types/react": "17.0.40",
     "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux-mock-store": "^1.0.3",
     "babel-jest": "^29.3.1",
+    "babel-plugin-transform-imports": "^2.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.3.1",
     "jest-expo": "^47.0.0",
     "react-test-renderer": "^18.2.0",
     "redux-mock-store": "^1.5.4",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.6.3",
-    "@types/react": "17.0.40"
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "react-native",
