--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
+  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "typeRoots": [
+      "expo-router/ts-declarations"
+    ],
     "skipLibCheck": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
@@ -13,7 +17,7 @@
     "noEmit": true,
     "strict": true,
     "target": "esnext",
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "paths": {
       "@*": [
         "./*"
@@ -23,5 +27,4 @@
   "exclude": [
     "node_modules"
   ],
-  "extends": "expo/tsconfig.base"
 }
